ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 3.3.8
    • Affects Version/s: None
    • Component/s: MapReduce, Querying
    • None
    • Fully Compatible
    • ALL
    • v3.2
    • Query 15 (06/03/16)
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This leads to a race condition in which the mapReduce command can attempt to access the Collection's cursor manager after it has been destroyed. This can lead to the server shutting down with a segmentation fault, though I suspect the probability of such an event occurring is low.

            Assignee:
            David Storch
            Reporter:
            David Storch
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: