SERVER-24196 ensure mapReduce safely frees its RangePreserver